trafficmanagement/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
   name: uday-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "example.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: k8-secret-name
      hosts:
        - "example.com"
