trafficmanagement/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
spec:
  host: myapp
  subsets:
    - name : v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
