trafficmanagement/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: uday-virtualservice
spec:
  hosts:
    - "example.com"
  gateway:
    - "uday-gateway"
  http:
    - match :
        - uri:
            prefix: "/"
      route:
        - destination:
            host: http-service.default.svc.local
            port: 8080
            subset: v1
          weight: 80
    - match :
        -uri:
          prefix: "/anything"
      route:
        - destination:
            host: https-service.default.svc.local
            port: 8443
            subset: v1
          weight: 80
